# JSG-StoryWeaver

./: .env.example  A11Y_AUDIT_REPORT.md  CODEBASE_ACTION_PLAN.md  CODEBASE_REVIEW_REPORT.md  Enhancement-Specifications.md  FEATURE_VERIFICATION_REPORT.md  Framework-Mixing-Analysis.md  IMPLEMENTATION_GUIDE.md  ISSUE_ANALYSIS_REPORT.md  README.md  REMEDIATION_ACTION_PLAN.md  RUST_CODEBASE_FIXES_REQUIRED.md  RUST_CODEBASE_REPAIR_PLAN.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_FIX_PLAN.md  StoryWeaver-Development-Plan.md  StoryWeaver-MasterPlan.md  Three_Initiative_Plan.md  UI_COMPONENT_CONSOLIDATION.md  fix_sqlx_pools.py  package-lock.json  package.json  package.json.update  playwright.config.ts  raw_reflection_log.md  test-story-bible-detection.md  tsconfig.json  vite.config.ts
src-tauri/: .env  012_database_improvements.sql  COMPILATION_FIXES_PLAN.md  Cargo.toml  build_errors.txt  build_errors_current.txt  build_errors_current_fix.txt  build_errors_detailed.txt  build_errors_final.txt  build_errors_final_check.txt  build_errors_latest.txt  build_errors_progress.txt  build_output.txt  cargo_errors.txt  check_output.txt  clippy_full_output.txt  collaboration_fix_check.txt  collaboration_sessions_fix_check.txt  compilation_errors.txt  create_database.sql  create_streaming_sessions_table.sql  current_errors.txt  documents_notifications_fix_check.txt  final_check.txt  final_check_after_schema_fix.txt  final_errors.txt  fix_brainstorm_sessions_schema.sql  fix_canvas_columns.sql  fix_canvas_elements_columns.sql  fix_collaboration_sessions.sql  fix_collaboration_tables.sql  fix_credit_usage_schema.sql  fix_documents_and_notifications.sql  fix_final_missing_items.sql  (+28 more)
(+635 files in other folders)
